--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-color: #444;
+    background-color: #d1c6e3;
     margin: 0;
     min-height: 100vh;
     display: flex;
@@ -54,6 +54,7 @@ body {
     max-width: 100vw;
     box-sizing: border-box;
     border-radius: 28px; /* match rounded corners */
+    transform: scale(2);
 }
 
 .window {
@@ -111,7 +112,7 @@ body {
     width: 100px;
     float: left;
     background-color: #eee;
-    background-image: linear-gradient(#16013c, #741a5e, #430155, #16013c);
+    background-image: linear-gradient(#5b36a1, #ac6199, #430155, #16013c);
     height: calc(var(--item-height) * 3);
 }
 
@@ -192,47 +193,3 @@ body {
         transform: rotate(7deg);
     }
 }*/
-
-@media (max-width: 600px) {
-  :root {
-    --item-height: 70px;
-  }
-  body {
-    font-size: 18px;
-    padding: 0;
-    min-height: 100vh;
-    align-items: flex-start;
-  }
-  #container {
-    padding: 10vw 2vw;
-    max-width: 100vw;
-    border-radius: 18px;
-  }
-  .window {
-    height: calc(var(--item-height) * 1.2);
-    border-radius: 12px;
-  }
-  .window-border {
-    padding: 2vw;
-    border-radius: 16px;
-  }
-  .icon {
-    width: 60px;
-    height: var(--item-height);
-  }
-  .outer-col {
-    width: 70px;
-    height: calc(var(--item-height) * 3);
-  }
-  .outer-spacer {
-    width: 4px;
-  }
-  .col img {
-    margin: 4px 0;
-  }
-  .start-button {
-    font-size: 1.1em;
-    padding: 0.6em 1.5em;
-    border-radius: 12px;
-  }
-}
